--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,23 +1,5 @@
-{{count-up
-  startVal=startVal
-  endVal=endVal
-  duration=duration
-  decimals=decimals
-  useEasing=useEasing
-  easingFn=customeEasing
-  useGrouping=useGrouping
-  separator=separator
-  decimal=decimal
-  prefix=prefix
-  suffix=suffix }}
+{{!-- The following component displays Ember's default welcome message. --}}
+{{welcome-page}}
+{{!-- Feel free to remove this! --}}
 
-<div>startVal:{{input value=startVal}}</div>
-<div>endVal: {{input value=endVal}}</div>
-<div>duration: {{input value=duration}}</div>
-<div>decimals: {{input value=decimals}}</div>
-<div>useEasing: {{input type='checkbox' checked=useEasing}}</div>
-<div>useGrouping: {{input type='checkbox' checked=useGrouping}}</div>
-<div>separator: {{input value=separator}}</div>
-<div>decimal: {{input value=decimal}}</div>
-<div>prefix: {{input value=prefix}}</div>
-<div>suffix: {{input value=suffix}}</div>
+{{outlet}}
